<resources>
    <string name="app_name">Maravilhas do Mundo</string>
    <string name="user_name">Usuário</string>
    <string name="password">Senha</string>
    <string name="login">Autenticar</string>
    <string name="sign_up">Cadastrar</string>
    <string name="real_name">Nome</string>
    <string name="title_activity_sign_up">Cadastrar Usuário</string>
    <string name="title_activity_world_wonders">Maravilhas do Mundo</string>
    <string name="fire">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="dialog_fire_missiles">Dialogo</string>
    <string name="title_activity_wonder_detail">WonderDetailActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
