<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:hint="@string/real_name"
        android:id = "@+id/input_name"
        android:layout_margin="8dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:hint="@string/user_name"
        android:id = "@+id/input_user"
        android:layout_margin="8dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:hint="@string/password"
        android:id = "@+id/input_password"
        android:inputType="textPassword"
        android:layout_margin="8dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="20dp"
        android:id="@+id/btn_signup"
        android:text="@string/sign_up"
        android:textSize="20dp"
        />

</LinearLayout>